// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pet home screen snapshots empty 1`] = `
<RNCSafeAreaView
  className="flex-1 items-center justify-center gap-4 bg-white px-6"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <Text
    className="text-center text-base text-brand-900"
    testID="pet-home-empty"
  >
    This pet couldn't be found.
  </Text>
</RNCSafeAreaView>
`;

exports[`pet home screen snapshots error 1`] = `
<RNCSafeAreaView
  className="flex-1 items-center justify-center gap-4 bg-white px-6"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <Text
    className="text-center text-base text-red-600"
    testID="pet-home-error"
  >
    We couldn't load this pet.
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex-row items-center justify-center gap-2 rounded-lg bg-brand-700 px-6 py-3"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="pet-home-retry"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#ffffff",
            "fontSize": 18,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
    <Text
      className="text-base font-semibold text-white"
    >
      Retry
    </Text>
  </View>
</RNCSafeAreaView>
`;

exports[`pet home screen snapshots loaded 1`] = `
<View
  className="flex-1"
>
  <View
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="home-gradient-background"
  >
    <View
      colors={
        [
          "#f2f8f6",
          "#ffffff",
          "#dcece6",
        ]
      }
      end={
        {
          "x": 1,
          "y": 1,
        }
      }
      start={
        {
          "x": 0,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <View
        colors={
          [
            "#fdf8ef",
            "#f2f8f6",
            "#eef7f1",
          ]
        }
        end={
          {
            "x": 0,
            "y": 1,
          }
        }
        start={
          {
            "x": 1,
            "y": 0,
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
  </View>
  <RNCSafeAreaView
    className="flex-1"
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
  >
    <View
      className="gap-3 px-6 pb-4 pt-2"
      testID="pet-home-header-region"
    >
      <View
        className="flex-row items-center gap-4 rounded-2xl bg-white px-4 shadow-md"
        entering={
          {
            "delay": [Function],
            "duration": [Function],
          }
        }
        style={
          {
            "height": 140,
          }
        }
        testID="pet-home-header-card"
      >
        <Image
          className="h-24 w-24 rounded-full"
          source={
            {
              "uri": "file:///snap.jpg",
            }
          }
          testID="pet-home-photo"
        />
        <View
          className="flex-1 gap-2"
        >
          <Text
            className="text-2xl font-bold text-brand-900"
            testID="pet-home-name"
          >
            Rex
          </Text>
          <View
            className="flex-row flex-wrap items-center gap-2"
          >
            <View
              className="rounded-full bg-brand-50 px-3 py-1"
              testID="pet-home-species"
            >
              <Text
                className="text-xs font-medium text-brand-700"
              >
                Dog
              </Text>
            </View>
            <View
              className="rounded-full bg-brand-50 px-3 py-1"
            >
              <Text
                className="text-xs font-medium text-brand-700"
                testID="pet-home-breed"
              >
                labrador-retriever
              </Text>
            </View>
            <View
              className="rounded-full bg-brand-50 px-3 py-1"
            >
              <Text
                className="text-xs font-medium text-brand-700"
                testID="pet-home-age"
              >
                2 yr
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        entering={
          {
            "delay": [Function],
            "duration": [Function],
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="flex-row items-center gap-4 rounded-2xl bg-brand-700 px-5 py-4 shadow-md"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "minHeight": 56,
              },
              null,
            ]
          }
          testID="pet-home-cta"
        >
          <View
            className="h-12 w-12 items-center justify-center rounded-full bg-white/20"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#ffffff",
                    "fontSize": 24,
                  },
                  undefined,
                  {
                    "fontFamily": "ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            className="flex-1 gap-1"
          >
            <Text
              className="text-lg font-semibold text-white"
            >
              Something wrong?
            </Text>
            <Text
              className="text-sm text-white/80"
            >
              Get guidance on symptoms
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <RCTScrollView
      className="flex-1"
      testID="pet-home-scroll"
    >
      <View>
        <View
          className="gap-3 px-6 pb-8 pt-4"
        >
          <Text
            className="text-base font-semibold text-brand-900"
          >
            Quick actions
          </Text>
          <View
            className="flex-row flex-wrap gap-3"
          >
            <View
              className="min-w-[45%] flex-1 basis-[45%]"
              entering={
                {
                  "delay": [Function],
                  "duration": [Function],
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                className="items-center gap-2 rounded-2xl bg-white px-4 py-5 shadow-sm"
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={null}
                testID="quick-action-log-weight"
              >
                <View
                  className="h-11 w-11 items-center justify-center rounded-full bg-brand-100"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#1f6350",
                          "fontSize": 22,
                        },
                        undefined,
                        {
                          "fontFamily": "ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  className="text-center text-sm font-semibold text-brand-900"
                >
                  Log weight
                </Text>
              </View>
            </View>
            <View
              className="min-w-[45%] flex-1 basis-[45%]"
              entering={
                {
                  "delay": [Function],
                  "duration": [Function],
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                className="items-center gap-2 rounded-2xl bg-white px-4 py-5 shadow-sm"
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={null}
                testID="quick-action-log-note"
              >
                <View
                  className="h-11 w-11 items-center justify-center rounded-full bg-brand-100"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#1f6350",
                          "fontSize": 22,
                        },
                        undefined,
                        {
                          "fontFamily": "ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  className="text-center text-sm font-semibold text-brand-900"
                >
                  Log note
                </Text>
              </View>
            </View>
            <View
              className="min-w-[45%] flex-1 basis-[45%]"
              entering={
                {
                  "delay": [Function],
                  "duration": [Function],
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                className="items-center gap-2 rounded-2xl bg-white px-4 py-5 shadow-sm"
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={null}
                testID="quick-action-log-vet-visit"
              >
                <View
                  className="h-11 w-11 items-center justify-center rounded-full bg-brand-100"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#1f6350",
                          "fontSize": 22,
                        },
                        undefined,
                        {
                          "fontFamily": "ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  className="text-center text-sm font-semibold text-brand-900"
                >
                  Vet visit
                </Text>
              </View>
            </View>
            <View
              className="min-w-[45%] flex-1 basis-[45%]"
              entering={
                {
                  "delay": [Function],
                  "duration": [Function],
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                className="items-center gap-2 rounded-2xl bg-white px-4 py-5 shadow-sm"
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={null}
                testID="quick-action-reminders"
              >
                <View
                  className="h-11 w-11 items-center justify-center rounded-full bg-brand-100"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      [
                        {
                          "color": "#1f6350",
                          "fontSize": 22,
                        },
                        undefined,
                        {
                          "fontFamily": "ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  className="text-center text-sm font-semibold text-brand-900"
                >
                  Reminders
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</View>
`;

exports[`pet home screen snapshots loading 1`] = `
<RNCSafeAreaView
  className="flex-1 items-center justify-center gap-4 bg-white px-6"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <ActivityIndicator
    testID="pet-home-loading"
  />
  <Text
    className="text-center text-base text-brand-900"
  >
    Loading…
  </Text>
</RNCSafeAreaView>
`;
